fixes issue where the main image was not responsive and caused the layout to break on small screens. Also makes the items under the random information section to be responsive with flexbox properties.

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,8 +25,8 @@ section.hero.container {
 }
 
 .hero_image {
-  max-height: 200px;
-  width: auto;
+  height: auto;
+  width: 100%;
 }
 
 .logo {
@@ -90,21 +90,26 @@ footer {
 
 .flex {
   display: flex;
-  justify-content: center;
-  gap: 30px;
 }
 
 .random {
-  width: 125px;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
 .random > div {
   margin: 5px 0;
-  height: 125px;
-  width: 125px;
+  height: 20vw;
+  width: 20vw;
   border: 2px solid blue;
   border-radius: 10px;
+}
+
+.random > p {
+  width: 20vw;
 }
 
 .container.quote {
